# sailbot_workspace

./: .clang-format  .clang-tidy  .dockerignore  .env  .flake8  .gitignore  .markdown-link-check.json  .markdownlint.json  .markdownlintignore  Jully11-OWT-log-summary.md  README.md  build.sh  compile_commands.json  main_launch.py  mkdocs.yml  quick_build.sh  run_clang-tidy.sh  run_virtual_iridium.sh  sailbot.code-workspace  setup.sh  test.sh  versions.json
src/boat_simulator/: README.md  package.xml  setup.cfg  setup.py
src/boat_simulator/launch/: main_launch.py
src/boat_simulator/scripts/: build_airfoil_polars.py
src/custom_interfaces/: .gitignore  CMakeLists.txt  README.md  package.xml
src/custom_interfaces/.github/: CODEOWNERS
src/custom_interfaces/action/: SimRudderActuation.action  SimSailTrimTabActuation.action
src/custom_interfaces/msg/: AISShips.msg  DesiredHeading.msg  HelperAISShip.msg  HelperGenericSensor.msg  HelperHeading.msg  HelperLatLon.msg  HelperObstacle.msg  HelperPh.msg  HelperPressure.msg  HelperROT.msg  HelperSalinity.msg  HelperSpeed.msg  HelperTemp.msg  LPathData.msg  Path.msg  PhSensor.msg  PhSensors.msg  PressureSensor.msg  PressureSensors.msg  SailCmd.msg  SalinitySensor.msg  SalinitySensors.msg  SimWorldState.msg  TempSensor.msg  TempSensors.msg  WindSensor.msg
src/diagnostics/: .gitignore  CMakeLists.txt  README.md  package.xml
src/diagnostics/.github/: CODEOWNERS  release.yml
src/diagnostics/src/: CMakeLists.txt
src/global_launch/: README.md  README_release.md  integration_tests.py  main_launch.py  package.xml  setup.cfg  setup.py
src/global_launch/config/: README.md  globals.yaml  launch_globals.yaml  on_water_globals.yaml  test.yaml
src/global_launch/integration/: gen_dtypes.py  gen_ros_dtypes.py  integration_test_node.py
src/global_launch/voyage_log/: voyage_motto.txt
src/integration_tests/: README.md  custom-rosdep.yaml  package.xml  setup.cfg  setup.py
src/integration_tests/config/: generate_configs.sh
src/integration_tests/integration_tests/: gen_ros_dtypes.py  integration_test_node.py
src/integration_tests/launch/: main_launch.py
src/integration_tests/resource/: README.md  converter.py
src/integration_tests/testplans/: aisships.yaml  aisships_http.yaml  example.yaml  globalpath.yaml  path_http.yaml  ros_data.yaml  ros_data1.yaml  testplan_template.yaml  website.yaml
src/integration_tests/web testplans/: aisships_http.yaml  path_http.yaml
src/local_pathfinding/: .gitignore  AGENTS.md  README.md  WindReference.md  custom-rosdep.yaml  package.xml  requirements.txt  setup.cfg  setup.py
src/local_pathfinding/.github/: CODEOWNERS
src/local_pathfinding/deploy_plan/: deploy.yaml
src/local_pathfinding/diagrams/: visualizer.puml  visualizer_seq.puml  visualizer_uml.puml
src/local_pathfinding/global_paths/: README.md  mock_global_path.csv
src/local_pathfinding/land/: README.md  custom_utils.py  files.py  generate_land_data.py  land_polygon_etl.py  pickle_land_data.py  requirements  requirements.txt  test_land_polygons.ipynb
src/local_pathfinding/launch/: main_launch.py
src/local_pathfinding/local_pathfinding/: coord_systems.py  generate_land_data.py  generate_land_data_alt.py  global_path.py  land_polygon_etl.py  local_path.py  mock_ais_node.py  mock_gps.py  mock_wind_sensor.py  node_global_path.py  node_goal_monitor.py  node_mock_ais.py  node_mock_global_path.py  node_mock_gps.py  node_mock_wind_sensor.py  node_navigate.py  node_navigate_observer.py  objectives.py  obstacle_manager.py  obstacles.py  ompl_objectives.py  ompl_path.py  ompl_validity.py  run_test_plans.py  test_ompl_bindings.py  visualizer.py  wind_coord_systems.py
src/local_pathfinding/mock_ais_files/: ais_ships.csv
src/local_pathfinding/src/: hello
src/local_pathfinding/test/: Untitled-1.ipynb  get_server.py  post_server.py  test_coord_systems.py  test_dispatch_event.py  test_event_dispatcher.py  test_global_path.py  test_local_path.py  test_main_launch.py  test_mock_heading_sources.py  test_node_global_path.py  test_node_mock_global_path.py  test_node_mock_wind_sensor.py  test_node_navigate.py  test_node_navigate_observer.py  test_objectives.py  test_obstacles.py  test_ompl_objectives.py  test_ompl_path.py  test_ompl_path_visualized.py  test_ompl_validity.py  test_plan_class.py  test_visualizer.py  test_wind_coord_systems.py
src/local_pathfinding/test_plans/: basic.yaml  basic_more_obstacles.yaml  cog_rot_unavailable.yaml  combined_collision.yaml  crossing.yaml  gauntlet.yaml  head_on.yaml  jericho_on_water_test.yaml  land_collision.yaml  large_land.yaml  launch.yaml  low_wind_tack.yaml  multi_ship_convergence.yaml  narrow_channel.yaml  near_land.yaml  no_path_on_land_sail_disabled.yaml  on_water_mock_ais.yaml  overtaking.yaml  parallel_coast.yaml  pinched.yaml  scenario_events_demo.yaml  single_boat_collision.yaml  test_plan.py  upwind_narrow_channel.yaml  upwind_tack.yaml  vancouver_to_gulf_of_alaska_complex.yaml
src/local_pathfinding/visualizer/: test.ipynb
src/local_pathfinding/wind/: README.md  polar_sailing_speed_prediction_data  sailing_speed.ipynb
src/network_systems/: .gitignore  CMakeLists.txt  README.md  functions.cmake  package.xml  ros_info.txt  ros_info.yaml
src/network_systems/.github/: CODEOWNERS
src/network_systems/config/: README.md  all_disable.yaml  default_dev_en.yaml  default_prod_en.yaml
src/network_systems/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/network_systems/launch/: README.md  main_launch.py
src/network_systems/lib/: CMakeLists.txt  README.md
src/network_systems/log/: latest_build
src/network_systems/projects/: CMakeLists.txt
src/network_systems/scripts/: README.md  autogen_ros_topics.sh  build_path_proto  build_path_proto.cpp  can_stress_test.py  gen_ros_info.py  http_echo_server.py  poweroff.sh  rockblock_web_server.py  run_virtual_iridium.sh  sailbot_db  satellite_test_utils.py  send_wind.sh  shutdown.sh
src/pyompl/: CMakeLists.txt  package.xml
src/python_bindings/: CMakeLists.txt  package.xml
src/sailompl/: CMakeLists.txt  package.xml
(+7606 files in other folders)
