<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boat_simulator</name>
  <version>0.0.0</version>
  <description>UBC Sailbot's Boat Simulator</description>
  <maintainer email="software@ubcsailbot.org">Devon Friend</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ROS Dependencies -->
  <exec_depend>custom_interfaces</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <!-- Python Dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
