<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_launch</name>
  <version>0.0.0</version>
  <description>UBC Sailbot's global launch file</description>
  <maintainer email="software@ubcsailbot.org">UBC Sailbot</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
