<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>integration_tests</name>
  <version>0.0.0</version>
  <description>UBC Sailbot's integration tests ROS package</description>
  <maintainer email="henryhuang2001@gmail.com">Henry Huang</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>
  <exec_depend>python3-pymongo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
