<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_pathfinding</name>
  <version>0.0.0</version>
  <description>UBC Sailbot's local pathfinding ROS package</description>
  <maintainer email="software@ubcsailbot.org">Patrick Creighton</maintainer>
  <license>MIT</license>

  <!--ROS Dependencies-->
  <exec_depend>custom_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!--Python Dependencies-->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>python3-shapely2</exec_depend>
  <exec_depend>python3-geopandas</exec_depend>
  <exec_depend>python3-plotly</exec_depend>
  <exec_depend>python3-dash</exec_depend>
  <exec_depend>python3-anywidget</exec_depend>
  <exec_depend>python3-scipy</exec_depend>



  <!--Test Dependencies-->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
