<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>network_systems</name>
 <version>0.0.0</version>
 <description>UBC Sailbot's NET programs</description>
 <maintainer email="henryhuang2001@gmail.com">Henry Huang</maintainer>
 <license>Apache License 2.0</license>

 <!--ROS Dependencies-->
 <buildtool_depend>ament_cmake</buildtool_depend>
 <depend>custom_interfaces</depend>
 <depend>rclcpp</depend>
 <exec_depend>ros2launch</exec_depend>
 <depend>std_msgs</depend>

 <!--Boost-->
 <depend>boost</depend>
 <!--Protobuf-->
 <depend>protobuf-dev</depend>
 <!--Gtest-->
 <depend>gtest</depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>
